--- a/app/src/main/res/layout/fragment_wallet_address.xml
+++ b/app/src/main/res/layout/fragment_wallet_address.xml
@@ -40,7 +40,7 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/get_wallet_address"
-                android:textColor="@color/colorBlack"
+                android:textColor="?android:textColorPrimary"
                 app:layout_constraintBottom_toTopOf="@+id/textView30"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/install_the_app"
-                android:textColor="@color/colorBlack"
+                android:textColor="?android:textColorSecondary"
                 app:layout_constraintBottom_toTopOf="@id/commonInputLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -89,10 +89,11 @@
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etWalletAddress"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat"
+                    android:layout_weight="0"
                     android:inputType="text"
-                    android:maxLines="1"
+                    android:text="s45346mnffff879879879hgjhgjhgjhgjhgjhgjhgjhgjhg"
                     android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.@/ "
                     android:hint="@string/erc_address"
                     android:textSize="@dimen/_11sdp" />
@@ -109,7 +110,7 @@
                 android:text="@string/update"
                 android:textAllCaps="true"
                 android:textSize="@dimen/_12sdp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColors"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/txtEtherScan"
                 app:layout_constraintEnd_toEndOf="parent"
