--- a/app/src/main/res/drawable/text_black_border.xml
+++ b/app/src/main/res/drawable/text_black_border.xml
@@ -5,7 +5,7 @@
             <corners android:radius="@dimen/_3sdp" />
             <stroke
                 android:width="@dimen/_1sdp"
-                android:color="@android:color/black"
+                android:color="?android:textColorPrimary"
                 />
         </shape>
     </item>
