--- a/app/src/main/res/layout/activity_sasa_doctor.xml
+++ b/app/src/main/res/layout/activity_sasa_doctor.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clSasaLink"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <ImageView
