--- a/app/src/main/res/layout/fragment_dashboard_layout.xml
+++ b/app/src/main/res/layout/fragment_dashboard_layout.xml
@@ -7,6 +7,7 @@
 
 
       <ScrollView
+          android:id="@+id/svDashboard"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           >
@@ -234,7 +235,7 @@
 
               </LinearLayout>
 
-              <FrameLayout
+              <LinearLayout
                   android:id="@+id/ll_banner"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -243,7 +244,7 @@
                   android:layout_marginTop="@dimen/_7sdp"
                   android:layout_marginEnd="@dimen/_10sdp"
                   android:background="@color/semi_white"
-                  android:orientation="horizontal">
+                  android:orientation="vertical">
 
                   <ImageView
                       android:layout_width="match_parent"
@@ -254,8 +255,16 @@
                       android:src="@drawable/add_banner"
                       android:contentDescription="@string/app_name" />
 
-
-              </FrameLayout>
+                  <ImageView
+                      android:id="@+id/imgSasaBanner"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:scaleType="centerCrop"
+                      android:layout_margin="@dimen/_5sdp"
+                      android:adjustViewBounds="true"
+                      android:src="@drawable/sasa_banner"
+                      android:contentDescription="@string/app_name" />
+              </LinearLayout>
               <LinearLayout
                   android:layout_marginEnd="@dimen/_10sdp"
                   android:layout_marginStart="@dimen/_10sdp"
