--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -15,4 +15,11 @@
     <item name="android:textColor">@color/colorMenuTab</item>
     <item name="android:textSize">@dimen/_12sdp</item>
     </style>
+
+    <style name="MyAlertDialogTheme" parent="@android:style/Theme.Material.Dialog.Alert">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
+        <item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
+    </style>
 </resources>
