location service implemented

--- a/app/src/main/res/layout/fragment_dashboard_layout.xml
+++ b/app/src/main/res/layout/fragment_dashboard_layout.xml
@@ -257,6 +257,7 @@
 
                   <ImageView
                       android:id="@+id/imgSasaBanner"
+                      android:visibility="gone"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:scaleType="centerCrop"
