--- a/app/src/main/res/layout/fragment_points.xml
+++ b/app/src/main/res/layout/fragment_points.xml
@@ -5,19 +5,33 @@
     android:layout_height="match_parent"
     >
 
-
-    <TextView
-
-        android:layout_width="wrap_content"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/coming_soon"
-        android:textSize="@dimen/_16sdp"
-        android:fontFamily="@font/montserrat"
-        android:textColor="@color/dark_text_color"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:tabSelectedTextColor="#fff"
+        app:tabTextColor="#8BFFFFFF"
+        app:tabIconTint="@android:color/white"
+        app:tabIconTintMode="multiply"
+        app:tabIndicatorColor="@color/colorYellow"
+        app:tabMode="scrollable"
+        android:background="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/tabLayout"
+        android:layout_centerInParent="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
