--- a/app/src/main/res/layout/fragment_lpk.xml
+++ b/app/src/main/res/layout/fragment_lpk.xml
@@ -210,6 +210,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/llLpkTrading"
         android:orientation="vertical">
         <androidx.cardview.widget.CardView
             android:id="@+id/cvCmartTreading"
