--- a/app/src/main/res/layout/credit_plan_list_cell.xml
+++ b/app/src/main/res/layout/credit_plan_list_cell.xml
@@ -1,42 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context=".points.view.PlansFragment">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPlans"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_10sdp">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <com.app.l_pesa.common.CommonTextRegular
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
                 android:layout_marginLeft="@dimen/_10sdp"
-                android:textColor="?android:textColorPrimary"
-                android:text="Buildup you Lpesa score and enjoy lots more benifit. Buy 5 point today."/>
+                android:layout_weight="1"
+                android:id="@+id/tvLoanPlanContent"
+                tools:text="Buildup you Lpesa score and enjoy lots more benifit. Buy 1 point today."
+                android:textColor="?android:textColorPrimary" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                app:backgroundTint="@color/colorYellow"
+                app:fabSize="mini"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
-                app:fabSize="mini"
-                app:backgroundTint="@color/colorYellow"
+                android:layout_gravity="center"
                 android:layout_margin="@dimen/_5sdp"
-                android:src="@drawable/ic_next"
-                android:layout_gravity="center"/>
+                android:src="@drawable/ic_next" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</FrameLayout>
