add points to buy

--- a/app/src/main/res/layout/credit_plan_list_cell.xml
+++ b/app/src/main/res/layout/credit_plan_list_cell.xml
@@ -11,25 +11,27 @@
         android:layout_margin="@dimen/_10sdp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_weight="1"
                 android:id="@+id/tvLoanPlanContent"
-                tools:text="Buildup you Lpesa score and enjoy lots more benifit. Buy 1 point today."
+                tools:text="Buildup  Buy 1 point today."
                 android:textColor="?android:textColorPrimary" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 app:backgroundTint="@color/colorYellow"
                 app:fabSize="mini"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
+                android:id="@+id/fabApply"
+                android:layout_weight="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/_5sdp"
                 android:src="@drawable/ic_next" />
