--- a/app/src/main/res/layout/layout_registration_step_one.xml
+++ b/app/src/main/res/layout/layout_registration_step_one.xml
@@ -4,7 +4,6 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
 
     >
@@ -111,12 +110,12 @@
         android:layout_height="@dimen/_40sdp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
+        android:textColor="#fff"
         android:layout_marginEnd="@dimen/_10sdp"
         android:background="@drawable/bg_button_app"
         android:fontFamily="@font/montserrat"
         android:text="@string/continue_"
         android:textAllCaps="true"
-        android:textColor="@color/colorWhite"
         android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
