--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,6 @@
         android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorWhite"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <ImageView
@@ -136,7 +135,7 @@
             android:fontFamily="@font/montserrat"
             android:text="@string/login"
             android:textAllCaps="true"
-            android:textColor="?android:textColorPrimaryInverse"
+            android:textColor="#fff"
             android:textSize="@dimen/_12sdp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/txtForgotPin"
@@ -190,9 +189,9 @@
             android:background="@drawable/yellow_button"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
+            android:textColor="#000"
             android:text="@string/calculate_your_loan"
             android:textAllCaps="true"
-            android:textColor="@color/colorWhite"
             android:textSize="@dimen/_12sdp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
