--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -30,7 +30,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
 
@@ -63,17 +62,33 @@
             app:layout_constraintBottom_toTopOf="@+id/layoutBottom">
 
 
-            <com.app.l_pesa.common.CircularImageView
-                android:id="@+id/imageProfile"
-                android:layout_centerInParent="true"
-                android:layout_width="@dimen/_125sdp"
-                android:layout_height="@dimen/_125sdp"
-                android:background="@drawable/ic_user"
-                app:civ_border_width="0dp"
-                app:civ_background_color="@android:color/white"
-                app:civ_border_color="@android:color/white"
-                app:civ_shadow="false"
-               />
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
+                <com.app.l_pesa.common.CircularImageView
+                    android:id="@+id/imageProfile"
+                    android:layout_margin="@dimen/_20sdp"
+                    android:layout_width="@dimen/_125sdp"
+                    android:layout_height="@dimen/_125sdp"
+                    android:background="@drawable/ic_user"
+                    app:civ_border_width="0dp"
+                    app:civ_background_color="@android:color/white"
+                    app:civ_border_color="@android:color/white"
+                    app:civ_shadow="false"
+                    />
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/fabProfile"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:src="@drawable/ic_edit_image"
+                    app:backgroundTint="@color/colorYellow"
+                    android:layout_gravity="bottom|center"/>
+            </FrameLayout>
+
+
+
 
         </RelativeLayout>
 
@@ -81,7 +96,6 @@
             android:id="@+id/layoutBottom"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_65sdp"
-            android:background="@android:color/white"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +113,7 @@
                 android:textAllCaps="true"
                 android:textStyle="bold"
                 android:textSize="@dimen/_12sdp"
-                android:textColor="@color/colorWhite"
+                android:textColor="#fff"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_gravity="center"
