--- a/app/src/main/res/layout/bottom_sheet_apply_credit_plan.xml
+++ b/app/src/main/res/layout/bottom_sheet_apply_credit_plan.xml
@@ -142,6 +142,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/bg_button_app"
                 android:text="Apply"
+                android:id="@+id/btnApply"
                 android:textColor="@color/buttonTextColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/tvDesc"
