--- a/app/src/main/res/layout/content_email_required.xml
+++ b/app/src/main/res/layout/content_email_required.xml
@@ -4,7 +4,6 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <com.app.l_pesa.common.CommonTextRegular
@@ -71,10 +70,10 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:background="@drawable/bg_button_app"
         android:focusable="true"
+        android:textColor="#fff"
         android:fontFamily="@font/montserrat"
         android:text="@string/continue_"
         android:textAllCaps="true"
-        android:textColor="@color/colorWhite"
         android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
