--- a/app/src/main/res/layout/content_email_verification.xml
+++ b/app/src/main/res/layout/content_email_verification.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rootLayout"
-    android:background="@color/colorWhite"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
 
     >
@@ -76,10 +75,10 @@
         android:fontFamily="@font/montserrat"
         android:background="@drawable/bg_button_app"
         android:text="@string/verify"
+        android:textColor="#fff"
         android:textAllCaps="true"
         android:textStyle="bold"
         android:textSize="@dimen/_12sdp"
-        android:textColor="@color/colorWhite"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_12sdp"
         android:layout_marginTop="@dimen/_10sdp"
