--- a/app/src/main/res/layout/layout_registration_step_five.xml
+++ b/app/src/main/res/layout/layout_registration_step_five.xml
@@ -5,7 +5,7 @@
         android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
+
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
 
@@ -62,7 +62,6 @@
             android:id="@+id/layoutBottom"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_65sdp"
-            android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rlImage"
@@ -79,11 +78,10 @@
                 android:textAllCaps="true"
                 android:textStyle="bold"
                 android:textSize="@dimen/_12sdp"
-                android:textColor="@color/colorWhite"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_gravity="center"
-
+                android:textColor="#fff"
 
 
                 />
