--- a/app/src/main/res/layout/fragment_token_transfer.xml
+++ b/app/src/main/res/layout/fragment_token_transfer.xml
@@ -101,7 +101,7 @@
                     android:text="@string/transfer"
                     android:textAllCaps="true"
                     android:textStyle="bold"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="#fff"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
