--- a/app/src/main/res/layout/fragment_wallet_address.xml
+++ b/app/src/main/res/layout/fragment_wallet_address.xml
@@ -110,7 +110,7 @@
                 android:text="@string/update"
                 android:textAllCaps="true"
                 android:textSize="@dimen/_12sdp"
-                android:textColor="@color/textColors"
+                android:textColor="#fff"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/txtEtherScan"
                 app:layout_constraintEnd_toEndOf="parent"
