--- a/app/src/main/res/layout/layout_list_dashboard_loan.xml
+++ b/app/src/main/res/layout/layout_list_dashboard_loan.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -12,6 +13,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_5sdp"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -44,6 +46,20 @@
                 app:layout_constraintBottom_toTopOf="@+id/txt_loan_details"/>
 
             <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtAmountFirst"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center|start"
+                android:text="@string/app_name"
+                android:textColor="@color/dark_text_color"
+
+                android:textSize="@dimen/_12sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/viewDividerOne"
+                app:layout_constraintTop_toTopOf="@+id/txt_loan_type" />
+            <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_loan_details"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -59,6 +75,22 @@
                 app:layout_constraintEnd_toEndOf="@+id/viewDividerOne"
                 />
 
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtAmountSecond"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center|start"
+                android:paddingBottom="@dimen/_10sdp"
+                android:text="@string/app_name"
+                android:textColor="@color/textColors"
+                android:textSize="@dimen/_10sdp"
+
+                app:layout_constraintBottom_toBottomOf="@+id/txt_loan_details"
+                app:layout_constraintEnd_toEndOf="@+id/txtAmountFirst"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/txt_loan_details"
+                app:layout_constraintTop_toBottomOf="@+id/txt_loan_type" />
             <View
                 android:id="@+id/viewDividerOne"
                 android:layout_width="@dimen/_1sdp"
@@ -76,59 +108,33 @@
                 android:id="@+id/constraintRight"
                 android:layout_width="@dimen/_95sdp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@+id/viewDividerOne"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintStart_toEndOf="@+id/viewDividerOne"
+                app:layout_constraintTop_toBottomOf="@+id/txtAmountSecond">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
 
 
-                    >
+                    app:layout_constraintTop_toTopOf="parent">
 
-                    <com.app.l_pesa.common.CommonTextRegular
-                        android:id="@+id/txtAmountFirst"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/montserrat"
-                        android:gravity="center|start"
-                        android:text="@string/app_name"
-                        android:textColor="@color/dark_text_color"
-                        android:textSize="@dimen/_12sdp"
-                        android:layout_marginStart="@dimen/_2sdp"
-
-                        />
-
-                    <com.app.l_pesa.common.CommonTextRegular
-                        android:id="@+id/txtAmountSecond"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_3sdp"
-                        android:paddingBottom="@dimen/_10sdp"
-                        android:fontFamily="@font/montserrat"
-                        android:gravity="center|start"
-                        android:text="@string/app_name"
-                        android:textColor="@color/textColors"
-                        android:textSize="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_2sdp"
-
-                        />
 
                     <com.app.l_pesa.common.CustomButtonRegular
                         android:id="@+id/btn_apply_loan"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/_28sdp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|start"
                         android:layout_marginStart="@dimen/_2sdp"
                         android:layout_marginTop="@dimen/_3sdp"
                         android:layout_marginEnd="@dimen/_2sdp"
                         android:fontFamily="@font/montserrat"
                         android:gravity="center"
-                        android:layout_gravity="center|start"
                         android:text="@string/repayments"
                         android:textAllCaps="false"
                         android:textColor="@color/colorWhite"
@@ -171,28 +177,27 @@
 
             <com.warkiz.widget.IndicatorStayLayout
                 android:id="@+id/seekBarLayout"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/txtRepayments"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:visibility="gone"
-                >
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/txtEnd"
+                app:layout_constraintStart_toEndOf="@+id/txtStart"
+                app:layout_constraintTop_toBottomOf="@+id/txt_loan_details">
 
                 <com.warkiz.widget.IndicatorSeekBar
                     android:id="@+id/seekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:isb_indicator_color="@color/colorRedLight"
                     app:isb_show_indicator="rectangle"
+                    app:isb_thumb_color="#08a9ea"
                     app:isb_track_background_color="@color/colorRedLight"
                     app:isb_track_background_size="@dimen/_3sdp"
                     app:isb_track_progress_color="#2bbd83"
                     app:isb_track_progress_size="@dimen/_5sdp"
-                    app:isb_thumb_color="#08a9ea"
-                    app:isb_indicator_color="@color/colorRedLight"
 
                     />
 
@@ -201,31 +206,33 @@
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtStart"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/color_gray_text"
                 android:textSize="@dimen/_12sdp"
-                android:layout_marginStart="@dimen/_14sdp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/txtEnd"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/seekBarLayout"
-                app:layout_constraintBottom_toBottomOf="parent"
-                 />
+                app:layout_constraintTop_toTopOf="@+id/txtEnd"
+                app:layout_constraintVertical_bias="1.0"
+                tools:text="0" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtEnd"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/color_gray_text"
                 android:textSize="@dimen/_12sdp"
-                android:layout_marginEnd="@dimen/_14sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/seekBarLayout"
-                app:layout_constraintBottom_toBottomOf="parent"
-                 />
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/seekBarLayout"
+                app:layout_constraintEnd_toStartOf="@+id/constraintRight"
+                app:layout_constraintTop_toTopOf="@+id/seekBarLayout"
+                app:layout_constraintVertical_bias="1.0"
+                tools:text="0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -233,7 +240,7 @@
     </androidx.cardview.widget.CardView>
 
 
-</LinearLayout>
+</FrameLayout>
 
 
 
