--- a/app/src/main/res/layout/activity_email_verify.xml
+++ b/app/src/main/res/layout/activity_email_verify.xml
@@ -53,7 +53,7 @@
         android:focusable="true"
         android:gravity="center"
         android:inputType="number"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/textColors"
         android:textSize="@dimen/_14sdp"
         app:cursorColor="@color/colorGreyDeep"
         app:cursorWidth="1px"
